# plutus-sellbuy

./: .gitignore  README.md  cabal.project  plutus-sellbuy.cabal  sellbuycontract.plutus
app/: plutus-sellbuy.hs  plutus-sellbuycontract.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4.20210212/: package.cache  plutus-sellbuy-1.27.0-inplace.conf
dist-newstyle/src/: Win32-net_-e9415802910225c6.cache  cardano-a_-69e96f3eceed3ed5.cache  cardano-b_-c0de99f0ccd585cd.cache  cardano-c_-94cfeccbf1aa3cf5.cache  cardano-l_-793ecdcee1fc1ce7.cache  cardano-n_-870b8b2b68d602a2.cache  cardano-p_-98329c466570048a.cache  cardano-w_-c9e033b0ec7ad11b.cache  flat-64b673dc3eef5b9f.cache  goblins-7fe4f5e9bbbd1224.cache  iohk-moni_-c7ca6b005d6f76c5.cache  ouroboros_-268d3b2310e5b441.cache  plutus-3b55de0732f6b166.cache  plutus-ap_-cbcc5c6ab544aad6.cache  purescrip_-76d561c4df795bb9.cache  servant-p_-e28973085ebef430.cache
src/Cardano/PlutusCode/: SellBuy.hs  SellBuyContract.hs
src/Cardano/PlutusCode/tests/: RobustSellBuyContract.hs  SellBuyContract(3 sign).hs  SellBuyContract(with addressvalidation).hs  ale.plutus  alejandro.plutus  alescript.addr  newTest.hs  playgrounSimpleBuySell.hs  plutus-sellbuy copy.cabal.txt  reedemer42.plutus  sellbuy.plutus  sellbuyconract.plutus  testcontract.hs  toplaygroud.hs
