cabal-version: 2.4

name:                   plutus-sellbuy
version:                1.27.0
description:            End to end examples of creating and executing Plutus scripts.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Cardano.PlutusCode.SellBuy
                       ,Cardano.PlutusCode.SellBuyContract
                        

  build-depends:        bytestring
                      , cardano-api
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , aeson
                      , base ^>=4.14.1.0
                      , containers
                      , data-default
                      , playground-common
                      , plutus-contract
                      , plutus-ledger-constraints
                      , text

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

executable plutus-sellbuy
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-sellbuy.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , plutus-sellbuy
                      , plutus-ledger-api
                      , bytestring

executable plutus-sellbuycontract
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              plutus-sellbuycontract.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T" -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , plutus-sellbuy
                      , plutus-ledger-api
                      , bytestring
                      , aeson
                      , base ^>=4.14.1.0
                      , containers
                      , data-default
                      , playground-common
                      , plutus-contract
                      , plutus-ledger-constraints
                      , text
                      , serialise




